--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-Hello World
+<!doctype html>
+<html lang="en" data-theme="light">
+    <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Portfolio - Ricardo Gomez</title>
+	<link rel="stylesheet" href="css/fontawesome/all.min.css">
+	<link rel="stylesheet" href="css/style.css">
+    </head>
+
+    <body>
+	<header>
+	    <div class="container-switch">
+		<input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+	    </div>
+
+	    <div class="logo">
+		<img src="img/01.jpg" alt="">
+	    </div>
+
+	    <div class="name">
+		<h1>Ricardo Gómez</h1>
+	    </div>
+
+	    <div class="bio">
+		<p>Hi. this is a list of my accounts and social medias so you can find them easily.</p>
+	    </div>
+	</header>
+	
+	<div class="container">
+	    	<a href="Gallery/index.html"><i class="far fa-image"></i></a>
+	</div>
+
+	<div class="buttons">
+	    <a target="_blank" class="personalities" href="https://www.16personalities.com/profiles/c31c0d81c16d9">
+		<i class="fas fa-user-circle"></i>16Personalities
+	    </a>
+
+	    <a target="_blank" class="twitter" href="https://twitter.com/rgomezgerardi">
+		<i class="fab fa-twitter"></i>Twitter
+	    </a>
+
+	    <a target="_blank" class="instagram" href="https://instagram.com/rgomezgerardi">
+		<i class="fab fa-instagram"></i>Instagram
+	    </a>
+
+	    <a target="_blank" class="facebook" href="https://facebook.com/rgomezgerardi">
+		<i class="fab fa-facebook-f"></i>Facebook
+	    </a>
+
+	    <a target="_blank" class="github" href="https://github.com/rgomezgerardi">
+		<i class="fab fa-github"></i>Github
+	    </a>
+
+	    <a target="_blank" class="reddit" href="https://reddit.com/u/rgomezgerardi">
+		<i class="fab fa-reddit-alien"></i>Reddit
+	    </a>
+
+	    <a target="_blank" class="telegram" href="https://reddit.com/r/rgomezgerardi">
+		<i class="fab fa-telegram-plane"></i>Telegram
+	    </a>
+
+	    <a target="_blank" class="paypal" href="https://telegram.com/rgomezgerardi">
+		<i class="fab fa-paypal"></i>Paypal
+	    </a>
+
+	    <a target="_blank" class="gmail" href="https://gmail.com/rgomezgerardi">
+		<i class="far fa-envelope"></i>Gmail
+	    </a>
+	</div>
+
+	<footer>   
+	    <p>Code for this page <a target="_blank" href="https://github.com/rgomezgerardi/rgomezgerardi.github.io">here.</a></p>
+	</footer>   
+	
+	<script src="js/main.js"></script>
+    </body>
+</html>
