--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</header>
 	
 	<div class="container">
-	    	<a href="Gallery/index.html"><i class="far fa-image"></i></a>
+	    	<a href="gallery/index.html"><i class="far fa-image"></i></a>
 	</div>
 
 	<div class="buttons">
